# AlienOSS

./: .delete-cmake.sh  .formatting.sh  AlienOS  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  adicionar.txt  cmake_install.cmake  main.c  valgrind.sh
assets/: alien.txt
cpu/: cpu.c  cpu.h
disk/: disk.c  disk.h
list/: list.c  list.h
log/: log.c  log.h
memory/: memory.c  memory.h
print/: print.c  print.h
process/: instruction.c  instruction.h  process.c  process.h
scheduler/: scheduler.c  scheduler.h
semaphore/: semaphore.c  semaphore.h
test/: list-test.c  sint3.txt  sint4.txt  sint5.txt  sintetico.txt  sintetico2.txt
ui/: main-window.c  main-window.h  utils.c  utils.h
